# ezsnes9x

./: .clang-tidy  .gitignore  65c816.h  BUILD.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  LEARNINGS.md  PLAN.md  README.md  bml.h  bsx.cpp  config.cpp  config.example.yaml  config.h  controls.cpp  controls.h  controls_analysis.md  cpu.cpp  cpuexec.cpp  cpuexec.h  cpumacro.h  cpuops.cpp  cpuops.h  display.h  dma.cpp  dma.h  dsp.cpp  dsp.h  font.h  fscompat.cpp  fxemu.h  fxinst.h  getset.h  gfx.cpp  gfx.h  globals.cpp  language.h  memmap.cpp  memmap.h  (+29 more)
app-android/: build.gradle.kts
app-android/src/main/: AndroidManifest.xml
app-android/src/main/java/com/ezsnes9x/emulator/: EmulatorActivity.kt
app-android/src/main/java/com/snes9x/emulator/: EmulatorActivity.kt
app-launcher/: build.gradle.kts
app-launcher/src/main/: AndroidManifest.xml
app-launcher/src/main/java/com/ezsnes9x/launcher/: BatteryState.kt  GameInfo.kt  GameResetHandler.kt  LauncherActivity.kt  LauncherViewModel.kt  RomDirectoryObserver.kt  RomScanner.kt  VolumeButtonHandler.kt  WifiState.kt
app-launcher/src/main/java/com/ezsnes9x/launcher/ui/: CoverFlowCarousel.kt  GameCard.kt  LauncherScreen.kt  ResetGameDialog.kt  SystemMenuDialog.kt  SystemStatusBar.kt
apu/: apu.cpp  apu.h  resampler.h
apu/bapu/dsp/: SPC_DSP.cpp  SPC_DSP.h  blargg_common.h
apu/bapu/snes/: snes.hpp
chips/: bsx.cpp  bsx.h  c4.cpp  c4.h  c4emu.cpp  dsp.cpp  dsp1.cpp  dsp2.cpp  dsp3.cpp  dsp4.cpp  fxemu.cpp  fxinst.cpp  msu1.cpp  msu1.h  obc1.h  sa1.cpp  sa1.h  sdd1.cpp  sdd1emu.cpp  sdd1emu.h  seta010.cpp  spc7110.cpp  spc7110.h  spc7110emu.cpp  spc7110emu.h  srtc.cpp
common/: bml.cpp  config.cpp  config.h  fscompat.cpp  globals.cpp  port.h  stream.h
controls/: controls.cpp
cpu/: cpu.cpp  cpuaddr.h  cpuexec.cpp  cpuexec.h  cpumacro.h  cpuops.cpp  sa1cpu.cpp
docs/: LAUNCHER_NEXT_STEPS.md  TIMING_STRATEGIES.md  android.md  architecture.md  collection-manager.md  configuration.md  controls.md  launcher-plan.md  launcher.md  macos.md  snes9x-simple-port.md
mem/: dma.cpp  memmap.cpp  memmap.h  rewind.cpp  rewind.h  snapshot.cpp  snapshot.h  statemanager.cpp  statemanager.h
platform/android/: CMakeLists.txt  main.cpp  settings.gradle.kts  toolchain-macos.cmake  toolchain.cmake
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/snes9x/emulator/: EmulatorActivity.kt
platform/macos/: AppIcon.icns  CMakeLists.txt  Info.plist  main.mm
platform/shared/: emulator.cpp  emulator.h  headless.cpp
ppu/: clip.cpp  gfx.cpp  gfx.h  ppu.cpp  ppu.h  tile.cpp  tileimpl.h
tools/: collection_manager.py
